# memqd

./: Makefile  Makefile.am  Makefile.in  README  assoc.c  config.h  config.h.in  config.status  configure  configure.ac  configure.in  items.c  memqd.c  memqd.h  slabs.c
.deps/: assoc.Po  items.Po  memqd-assoc.Po  memqd-items.Po  memqd-memqd.Po  memqd-slabs.Po  memqd.Po  slabs.Po
autom4te.cache/: output.0  output.2  requests  traces.0  traces.1  traces.2
doc/: Makefile  Makefile.in  MemQD.ppt
test/: benchmark.c
